--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,32 @@
-
+body,
+html {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background: #ecf0f1;
+}
 
 .App {
-  background: #209cee;
-  padding: 30px;
-  height: 100vh;
+    background: #209cee;
+    padding: 30px;
+    height: 100vh;
 }
 
 .todo-list {
-  background: #e8e8e8;
-  border-radius: 4px;
-  padding: 5px;
-  max-width: 400px;
+    background: #e8e8e8;
+    border-radius: 4px;
+    padding: 5px;
+    max-width: 400px;
 }
 
 .todo {
-  background: #fff;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
-  padding: 8px 10px;
-  font-size: 12px;
-  margin-bottom: 6px;
-  border-radius: 3px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.input {
-  background-color: white;
-  border-color: #dbdbdb;
-  color: #363636;
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
-  max-width: 100%;
-  width: 100%;
-  display: flex;
-  padding: 8px 10px;
-  margin-bottom: 6px;
-  align-items: center;
-  justify-content: space-between;
-  border: 1px;
+    background: #fff;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+    padding: 3px 10px;
+    font-size: 12px;
+    margin-bottom: 6px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
